implementa api get cliente por id