@@ -2,6 +2,7 @@ package br.com.petz.clientepet.cliente.application.api;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import br.com.petz.clientepet.cliente.domain.Cliente;
 import lombok.Value;
@@ -18,7 +19,7 @@ public class ClienteListResponse {
 	public static List<ClienteListResponse> converte(List<Cliente> clientes) {
 		return clientes.stream()
 				.map(ClienteListResponse::new)
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	private ClienteListResponse(Cliente cliente) {
